AC_INIT([vCPGw], [1.0], [naushad.dln@gmail.com])
AC_CONFIG_AUX_DIR([auxdir])
AM_INIT_AUTOMAKE([1.14.1 subdir-objects foreign])
AC_PROG_CXX
AC_PROG_CC
#AC_PROG_AR

AC_PROG_AWK
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_HEADER_STDC
AC_HEADER_DIRENT
AC_CONFIG_FILES([
 Makefile
 vAPSh/Makefile
 vTYSh/Makefile
 CPGw/Common/Makefile
 CPGw/Ipc/Makefile
 CPGw/Protocol/Makefile
 CPGw/Protocol/Arp/Makefile
 CPGw/Protocol/Dns/Makefile
 CPGw/Makefile
])

## This will create Makefile.in in each folder
AC_OUTPUT
