#/*!Name of the binary*/

noinst_LIBRARIES = libcommon.a

libcommon_a_SOURCES = src/commonIF.cc

libcommon_a_CPPFLAGS=-I$(srcdir)/inc \
                  -I/usr/local \
                  -I/usr/local/ACE-6.5.0/include

libcommon_a_CXXFLAGS=-g -Wall -std=gnu++11

libcommon_a_AR=ar rvs
#libipc_a_LDFLAGS=-L/usr/localACE-6.5.0/lib


