noinst_LIBRARIES = libArp.a

libArp_a_SOURCES = Src/Arp.cc


libArp_a_CPPFLAGS=-I$(srcdir)/Inc \
									-I$(srcdir)/../../Ipc/Inc \
                  -I$(srcdir)/../../Common/Inc \
                  -I$(srcdir)/../../Protocol/Inc \
                  -I$(srcdir)/../../../CPGw/Inc \
                  -I/usr/local \
                  -I/usr/local/ACE-6.5.0/include

libArp_a_CXXFLAGS=-g -Wall -std=gnu++11

libArp_a_AR=ar rvs


